[package]
name = "rust-ocaml-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
ocaml = { git = "https://github.com/zshipko/ocaml-rs" }
tokio = { version = "1.25.0", features = ["full"] }

[build-dependencies]
cc = { version = "1" }
ocaml-build = { git = "https://github.com/zshipko/ocaml-rs", features = [
  "dune"
] }
